[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Sprite/Player/Player_TurnL0.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://HP.tscn" type="PackedScene" id=3]
[ext_resource path="res://FuelBar.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprite/Player/Player_Idle.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprite/Player/Player_TurnR0.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprite/Player/Player_TurnR1.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprite/Player/Player_TurnL1.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprite/Player/Fwd0.png" type="Texture" id=9]
[ext_resource path="res://assets/StarsBackground.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprite/Object/RoundLight.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprite/Object/PlayerLights.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprite/Object/Flashlight.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprite/Player/Trap Indicator.png" type="Texture" id=14]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ) ],
"loop": false,
"name": "Forward",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "TurnL_r",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "TurnR_r",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ) ],
"loop": false,
"name": "TurnL",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "TurnR",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": false,
"name": "Forward_r",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
material = SubResource( 3 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 4.0

[node name="HP" parent="." instance=ExtResource( 3 )]
use_parent_material = true

[node name="RocketFuel" type="TextureProgress" parent="."]
use_parent_material = true
margin_left = -24.0
margin_top = -16.0
margin_right = -20.0
margin_bottom = 20.0
max_value = 1000.0
value = 1000.0
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="StarsBackground" type="Sprite" parent="ParallaxBackground"]
texture = ExtResource( 10 )
centered = false

[node name="TrapIndicator" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( -2, 2 )
texture = ExtResource( 14 )

[node name="Lights" type="Node2D" parent="."]
material = SubResource( 6 )
position = Vector2( 128, 128 )

[node name="centerLight" type="Light2D" parent="Lights"]
position = Vector2( -128, -128 )
enabled = false
texture = ExtResource( 11 )
offset = Vector2( 2, -2 )
range_z_max = 0

[node name="dirLight" type="Light2D" parent="Lights"]
position = Vector2( -154, -206 )
rotation = -0.174533
enabled = false
texture = ExtResource( 12 )
range_z_max = 1

[node name="Sprite" type="Sprite" parent="Lights/dirLight"]
material = SubResource( 4 )
texture = ExtResource( 13 )
offset = Vector2( 0, 64 )

[node name="dirLight2" type="Light2D" parent="Lights"]
position = Vector2( -100, -206 )
rotation = 0.174533
enabled = false
texture = ExtResource( 12 )
range_z_max = 1

[node name="Sprite" type="Sprite" parent="Lights/dirLight2"]
material = SubResource( 5 )
texture = ExtResource( 13 )
offset = Vector2( 0, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
z_index = 1
frames = SubResource( 2 )
animation = "Forward_r"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
